12/15/10 #2614, move license.txt files into image subdirectories
# 1.02.01 (47115) Dec 13, 2010
12/13/10 change points in game: +2 if correct on first try, +1 on second try
# 1.02.00 (45305) Oct 21, 2010
# 1.01.01 (45225) Oct 19, 2010
> move Game features and associated string translations to PhET common framework, for reuse in other sims
10/19/10 #2547, migrate Traditional Chinese (zh_TW) game strings to phetcommon
10/19/10 #2547, migrate Vietnamese (vi) game strings to phetcommon
10/19/10 #2547, migrate Serbian (sr) game strings to phetcommon
10/19/10 #2547, migrate Portuguese (pt) game strings to phetcommon
10/19/10 #2547, migrate Brazilian Portuguese (pt_BR) game strings to phetcommon
10/19/10 #2547, migrate Dutch (nl) game strings to phetcommon
10/19/10 #2547, migrate Korean (ko) game strings to phetcommon
10/19/10 #2547, migrate Hebrew (iw) game strings to phetcommon
10/19/10 #2547, migrate Persian (fa) game strings to phetcommon
10/19/10 #2547, migrate Spanish (es) game strings to phetcommon
10/19/10 #2547, migrate Greek (el) game strings to phetcommon
10/19/10 #2547, migrate Danish (da) game strings to phetcommon
10/19/10 #2547, move game English strings to phetcommon-strings.properties
10/19/10 #2547, move game classes to games/src
10/19/10 #2547, move game icons to games/data/games/images
10/19/10 #2547, create new "games" project for generalized game code and resources
10/19/10 #2547, generalized GameOverNode (needs to be migrated to phetcommon, along with associated icons and strings)
10/18/10 #2547, generalized TimeUtils to GameTimerFormat (needs to be migrated to phetcommon)
10/18/10 #2547, generalized Game Scoreboard (needs to be migrated to phetcommon, along with associated icons and strings)
10/14/10 #2547, generalized Game Settings panel (needs to be migrated to phetcommon, along with associated icons and strings)
# 1.01.00 (44416) Sep 27, 2010
> make Game Settings panel translatable
9/27/10 #2527, incomplete localization of Game Settings panel