@@ -1,3 +1,4 @@
+1/10/11 move IntegerSpinner to phetcommon
 12/15/10 #2614, move license.txt files into image subdirectories
 # 1.02.01 (47115) Dec 13, 2010
 12/13/10 change points in game: +2 if correct on first try, +1 on second try
